include/altdss/capi/dss.h

    /*! 
    Emergency (maximum) ampere rating of Line.
    */
    ALTDSS_CAPI_DLL double Lines_Get_EmergAmps(void);
    /*! 
    Normal ampere rating of Line.
    */
    ALTDSS_CAPI_DLL double Lines_Get_NormAmps(void);
    /*! 
    Emergency (maximum) ampere rating of Line.
    */
    ALTDSS_CAPI_DLL void Lines_Set_EmergAmps(double Value);
    /*! 
    Normal ampere rating of Line.
    */
    ALTDSS_CAPI_DLL void Lines_Set_NormAmps(double Value);
    /*! 
    Line geometry code
    */
    ALTDSS_CAPI_DLL const char* Lines_Get_Geometry(void);
    /*! 
    Line geometry code
    */
    ALTDSS_CAPI_DLL void Lines_Set_Geometry(const char* Value);
    /*! 
    Earth return resistance value used to compute line impedances at power frequency
    */
    ALTDSS_CAPI_DLL double Lines_Get_Rg(void);
    /*! 
    Earth Resistivity, m-ohms
    */
    ALTDSS_CAPI_DLL double Lines_Get_Rho(void);
    /*! 
    Earth return reactance value used to compute line impedances at power frequency
    */
    ALTDSS_CAPI_DLL double Lines_Get_Xg(void);
    /*! 
    Earth return resistance value used to compute line impedances at power frequency
    */
    ALTDSS_CAPI_DLL void Lines_Set_Rg(double Value);
    /*! 
    Earth Resistivity, m-ohms
    */
    ALTDSS_CAPI_DLL void Lines_Set_Rho(double Value);
    /*! 
    Earth return reactance value used to compute line impedances at power frequency
    */
    ALTDSS_CAPI_DLL void Lines_Set_Xg(double Value);
    /*! 
    Yprimitive for the active line object (complex array).
    */
    ALTDSS_CAPI_DLL void Lines_Get_Yprim(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Lines_Get_Yprim but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void Lines_Get_Yprim_GR(void);
    /*! 
    Yprimitive: Does Nothing at present on Put; Dangerous
    */
    ALTDSS_CAPI_DLL void Lines_Set_Yprim(const double* ValuePtr, int32_t ValueCount);
    /*! 
    Number of customers on this line section.
    */
    ALTDSS_CAPI_DLL int32_t Lines_Get_NumCust(void);
    /*! 
    Total Number of customers served from this line section.
    */
    ALTDSS_CAPI_DLL int32_t Lines_Get_TotalCust(void);
    /*! 
    Sets Parent of the active Line to be the active line. Returns 0 if no parent or action fails.
    */
    ALTDSS_CAPI_DLL int32_t Lines_Get_Parent(void);
    /*! 
    Number of Line objects in Active Circuit.
    */
    ALTDSS_CAPI_DLL int32_t Lines_Get_Count(void);
    /*! 
    Line spacing code
    */
    ALTDSS_CAPI_DLL const char* Lines_Get_Spacing(void);
    /*! 
    Line spacing code
    */
    ALTDSS_CAPI_DLL void Lines_Set_Spacing(const char* Value);
    ALTDSS_CAPI_DLL int32_t Lines_Get_Units(void);
    ALTDSS_CAPI_DLL void Lines_Set_Units(int32_t Value);
    /*! 
    Delivers the rating for the current season (in Amps)  if the "SeasonalRatings" option is active
    */
    ALTDSS_CAPI_DLL double Lines_Get_SeasonRating(void);
    /*! 
    Sets/gets the Line element switch status. Setting it has side-effects to the line parameters.
    */
    ALTDSS_CAPI_DLL uint16_t Lines_Get_IsSwitch(void);
    ALTDSS_CAPI_DLL void Lines_Set_IsSwitch(uint16_t Value);
    ALTDSS_CAPI_DLL int32_t Lines_Get_idx(void);
    ALTDSS_CAPI_DLL void Lines_Set_idx(int32_t Value);
    ALTDSS_CAPI_DLL void* Lines_Get_Pointer(void);