src/CAPI/CAPI_Lines.pas


    elem.YprimInvalid := TRUE;
end;
//------------------------------------------------------------------------------
function Lines_Get_EmergAmps(): Double; CDECL;
var
    elem: TLineObj;
begin
    Result := 0.0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.EmergAmps;
end;
//------------------------------------------------------------------------------
function Lines_Get_NormAmps(): Double; CDECL;
var
    elem: TLineObj;
begin
    Result := 0.0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.NormAmps;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_EmergAmps(Value: Double); CDECL;
var
    elem: TLineObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.EmergAmps := Value;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_NormAmps(Value: Double); CDECL;
var
    elem: TLineObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.NormAmps := Value;
end;
//------------------------------------------------------------------------------
function Lines_Get_Geometry(): PAnsiChar; CDECL;
var
    elem: TLineObj;
begin
    Result := NIL;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if elem.LineGeometryObj <> NIL then
        Result := DSS_GetAsPAnsiChar(DSSPrime, elem.LineGeometryObj.Name);
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Geometry(const Value: PAnsiChar); CDECL;
var
    elem: TLineObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.ParsePropertyValue(ord(TLineProp.geometry), Value, []); // calls FetchGeometryCode and sets YPrimInvalid
end;
//------------------------------------------------------------------------------
function Lines_Get_Rg(): Double; CDECL;
var
    elem: TLineObj;
begin
    Result := 0.0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.Rg;
end;
//------------------------------------------------------------------------------
function Lines_Get_Rho(): Double; CDECL;
var
    elem: TLineObj;
begin
    Result := 0.0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.rho;
end;
//------------------------------------------------------------------------------
function Lines_Get_Xg(): Double; CDECL;
var
    elem: TLineObj;
begin
    Result := 0.0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.Xg;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Rg(Value: Double); CDECL;
var
    elem: TLineObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.SetDouble(ord(TLineProp.Rg), Value, []); //TODO: it doesn't seem to set YPrimInvalid
    elem.YprimInvalid := TRUE;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Rho(Value: Double); CDECL;
var
    elem: TLineObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.SetDouble(ord(TLineProp.rho), Value, []); //TODO: it doesn't seem to set YPrimInvalid
    elem.YprimInvalid := TRUE;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Xg(Value: Double); CDECL;
var
    elem: TLineObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.SetDouble(ord(TLineProp.xg), Value, []); //TODO: it doesn't seem to set YPrimInvalid
    elem.YprimInvalid := TRUE;
end;
//------------------------------------------------------------------------------
procedure Lines_Get_Yprim(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
// Return the YPrim matrix for this element
var
    cValues: pComplexArray;
    elem: TLineObj;
begin
    if not _activeObj(DSSPrime, elem) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;
    cValues := elem.GetYprimValues(ALL_YPRIM);  // Get pointer to complex array of values
    if cValues = NIL then
    begin   // check for unassigned array
        DefaultResult(ResultPtr, ResultCount);
        Exit;  // Get outta here
    end;
    
    DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * elem.Yorder * elem.Yorder, elem.Yorder, elem.Yorder);
    Move(cValues[1], ResultPtr[0], ResultCount^ * SizeOf(Double));
end;

procedure Lines_Get_Yprim_GR(); CDECL;
// Same as Lines_Get_Yprim but uses global result (GR) pointers
begin
    Lines_Get_Yprim(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;

//------------------------------------------------------------------------------
procedure Lines_Set_Yprim(ValuePtr: PDouble; ValueCount: TAPISize); CDECL;
var
    elem: TLineObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
        
    // Do Nothing for now
    
    DoSimpleMsg(DSSPrime, _('Setting Yprim is currently not allowed.'), 1833);
end;
//------------------------------------------------------------------------------
function Lines_Get_NumCust(): Integer; CDECL;
var
    elem: TLineObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.BranchNumCustomers;
end;
//------------------------------------------------------------------------------
function Lines_Get_TotalCust(): Integer; CDECL;
var
    elem: TLineObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.BranchTotalCustomers;
end;
//------------------------------------------------------------------------------
function Lines_Get_Parent(): Integer; CDECL;
//  Sets the Active Line to the immediately upline Line obj, if any
//  Returns line index  or 0 if it fails or no more lines
var
    pLine: TLineObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, pLine) then
        Exit;

    if pLine.ParentPDelement = NIL then
        Exit;
        
    if (pLine.ParentPDelement.Enabled and ((pLine.ParentPDelement.DssObjtype and CLASSMASK) = LINE_ELEMENT)) then
    begin
        DSSPrime.ActiveCircuit.ActiveCktElement := pLine.ParentPDElement;
        Result := DSSPrime.ActiveCircuit.Lines.ActiveIndex;
    end;
end;
//------------------------------------------------------------------------------
function Lines_Get_Count(): Integer; CDECL;
begin
    Result := 0;
    if InvalidCircuit(DSSPrime) then
        Exit;
    Result := DSSPrime.ActiveCircuit.Lines.Count;
end;
//------------------------------------------------------------------------------
function Lines_Get_Spacing(): PAnsiChar; CDECL;
var
    elem: TLineObj;
begin
    Result := NIL;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if elem.LineSpacingObj <> NIL then
        Result := DSS_GetAsPAnsiChar(DSSPrime, elem.LineSpacingObj.Name);
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Spacing(const Value: PAnsiChar); CDECL;
var
    elem: TLineObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.ParsePropertyValue(ord(TLineProp.spacing), Value, []); // Sets YprimInvalid
end;
//------------------------------------------------------------------------------
function Lines_Get_Units(): Integer; CDECL;
var
    elem: TLineObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.LengthUnits;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Units(Value: Integer); CDECL;
// This code assumes the present value of line units is NONE.
// The Set functions in this interface all set values in this length unit.
var
    elem: TLineObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if (Value >= dssLineUnitsNone) and (Value < dssLineUnitsMaxnum) then
    begin
        elem.ParsePropertyValue(ord(TLineProp.units), LineUnitsStr(Value), []);
        elem.YprimInvalid := TRUE;
    end
    else
        DoSimpleMsg(DSSPrime, _('Invalid line units code. Please enter a value within range.'), 183);
end;
//------------------------------------------------------------------------------
function Lines_Get_idx(): Integer; CDECL;
begin
    Result := 0;
    if InvalidCircuit(DSSPrime) then
        Exit;
    Result := DSSPrime.ActiveCircuit.Lines.ActiveIndex
end;
//------------------------------------------------------------------------------
procedure Lines_Set_idx(Value: Integer); CDECL;
var
    pLine: TLineObj;
begin
    if InvalidCircuit(DSSPrime) then
        Exit;
    pLine := DSSPrime.ActiveCircuit.Lines.Get(Value);
    if pLine = NIL then
    begin
        DoSimpleMsg(DSSPrime, 'Invalid %s index: "%d".', ['Line', Value], 656565);
        Exit;
    end;
    DSSPrime.ActiveCircuit.ActiveCktElement := pLine;
end;
//------------------------------------------------------------------------------
function Lines_Get_SeasonRating(): Double; CDECL;
var
    RatingIdx: Integer;
    RSignal: TXYCurveObj;
    elem: TLineObj;
begin
    Result := 0;
    RatingIdx := -1;

    if not _activeObj(DSSPrime, elem) then
        Exit;

    if (not DSSPrime.SeasonalRating) or (DSSPrime.SeasonSignal = '') then 
    begin
        Result := elem.NormAmps;
        Exit;
    end;
    
    RSignal := DSSPrime.XYCurveClass.Find(DSSPrime.SeasonSignal);
    if RSignal <> NIL then
        RatingIdx := trunc(RSignal.GetYValue(DSSPrime.ActiveCircuit.Solution.DynaVars.intHour));
    
    // Just in case
    if (RatingIdx >= elem.NumAmpRatings) or (RatingIdx < 0) then
        Result := elem.NormAmps
    else
        Result := elem.AmpRatings[RatingIdx];
end;
//------------------------------------------------------------------------------
procedure Lines_Set_IsSwitch(Value: TAPIBoolean); CDECL;
var
    elem: TLineObj;
    prev: Integer = 0;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
        
    if elem.IsSwitch then
        prev := Integer(True);

    elem.SetInteger(ord(TLineProp.Switch), Integer(Value), []);
end;
//------------------------------------------------------------------------------
function Lines_Get_IsSwitch(): TAPIBoolean; CDECL;
var
    elem: TLineObj;
begin
    Result := FALSE;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.IsSwitch;
end;
//------------------------------------------------------------------------------
function Lines_Get_Pointer(): Pointer; CDECL;
var
    CktElem: TDSSCktElement;
begin
    Result := NIL;
    if InvalidCircuit(DSSPrime) then
        Exit;
    if (DSS_EXTENSIONS_COMPAT and ord(TDSSCompatFlags.ActiveLine)) <> 0 then
    begin
        CktElem := DSSPrime.ActiveCircuit.ActiveCktElement;
        if CktElem = NIL then
        begin
            if DSS_CAPI_EXT_ERRORS then
            begin
                DoSimpleMsg(DSSPrime, 'No active %s object found! Activate one and retry.', ['Line'], 8989);
            end;
            Exit;
        end;
        
        if CktElem is TLineObj then
            Result := CktElem as TLineObj;
            
        if (CktElem <> NIL) and (Result = NIL) {((CktElem.DssObjtype and CLASSMASK) <> LINE_ELEMENT)} then
        begin
            DoSimpleMsg(DSSPrime, 'Line Type Expected, but another found. DSS Class=%s, Element Name="%s"', 
                [CktElem.DSSClassName, CktElem.Name], 5007);
            Exit;
        end;
    end
    else
    begin
        Result := DSSPrime.ActiveCircuit.Lines.Active;
    end;
end;
//------------------------------------------------------------------------------
end.
